--- a/style.css
+++ b/style.css
@@ -16,9 +16,11 @@
     position:relative;
     top: 150px;
 }
+
 .animate{
     animation: jump 0.3s linear;
 }
+/* Jumping keyframes*/
 @keyframes jump{
     0%{top: 150px;}
     30%{top: 100px;}
